@@ -1,3 +1,6 @@
+Build 2620
+- fixed a problem where IRIREF nodes upon expansion lost their parent and ancestors
+
 Build 2490
 - parsertools again prints version and build information when run
 
